--- a/index.html
+++ b/index.html
@@ -12,9 +12,54 @@
       body {
         font-family: "Sono", sans-serif;
       }
+      .pricing-plan{
+        background-color: gray;
+      flex: 1;
+      max-width: 400px;
+      padding: 20px;
+      border-radius: 5px;
+      text-align: center;
+      }
+      .plan-button{
+        color: white;
+        background-color: chocolate;
+        border:none;
+      }
+
+      .pricing-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 50px;
+        height: 100vh;
+      }
+
+      .plan-price{
+        font-weight: bolder;
+        font-size: 50px;
+      }
+
+      .plan-features{
+        list-style:none;
+        padding: 0;
+        margin: 0;
+      }
+
+      .plan-features li{
+        margin: 20px;
+      }
+
+      .plan-title{
+        font-weight: bolder;
+      }
+
 
       /* Hint: What can you do with a media query and flexbox? */
       @media (max-width: 1250px) {
+        .pricing-container{
+          flex-direction: column;
+          height:100% ;
+        }
       }
     </style>
   </head>
